--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     color:dark-grey;
     padding:1em;
 }
+.desc {
+    padding-top:1em;
+    padding-bottom:1em;
+    padding-left:1em;
+}
 .convert {
     font-size:1.5em;
     width:90%;
