--- a/css/profanity-style.css
+++ b/css/profanity-style.css
@@ -63,7 +63,11 @@
   width=2em;
   height=2em;
 }
-
+.lyrics-box::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: transparent;
+}
 .word {
   padding-left: 0.1em;
   padding-right: 0.1em;
