--- a/conv/src/index.css
+++ b/conv/src/index.css
@@ -1,25 +1,87 @@
 html,body {
     height:98%;
     background-color:black;
-    color:white;
+    color:#f1f2f6;
+    font-family: Helvetica, Arial, Sans-Serif;
 }
 th {
     background-color:#3c6382;
 }
-button {
-    background-color:#0a3d62;
-    font-size:1.2em;
+td {
+    text-align:center;
+}
+select {
+    font-size:1em;
+}
+textarea {
     width:95%;
-    border-color:#3c6382;
-    color:white;
     padding:0.2em;
     margin:0.2em;
+    height:10em;
+    background-color:#dfe4ea;
+    color:#2f3542;
+}
+button {
+    padding:0.2em;
+    margin:0.2em;
+    background-color:#0a3d62;
+    border-color:#3c6382;
+    font-size:1em;
+    color:white;
+}
+.delete-lyrics-button {
+    position:absolute;
+    top:0.1em;
+    left:0.1em;
+
+}
+.danger-button {
+    background-color:#c23616;
+    border-color:#e84118;
+    color:white;
+}
+.danger-button:hover {
+    background-color:#e84118;
+    border-color:#f1c40f;
+}
+.big-button:hover {
+    background-color:#e67e22;
+    border-color:#d35400;
+}
+.big-button {
+    background-color:#4a69bd;
+    border-color:#6a89cc;
+    border-radius:2px;
+    font-size:1.2em;
+    width:95%;
+}
+.back-button:hover {
+    color:white;
+}
+.back-button {
+    position:absolute;
+    top:0.1em;
+    right:0.1em;
+    color:#3498db;
+    background-color:transparent;
+    border-color:transparent;
+    font-size:1.0em;
+}
+.upload-lyrics:hover{
+    background-color:#ff6b81;
+    border-color:#ffa502;
 }
 .upload-lyrics{
-    color:#c23616;
+    background-color:#ff4757;
+    border-color:#ff6b81;
+}
+.view-lyrics:hover{
+    background-color:#706fd3;
+    border-color:#ffa502;
 }
 .view-lyrics{
-    color:#0097e6;
+    background-color:#474787;
+    border-color:#706fd3;
 }
 .in-progress {
     color:#0097e6;
@@ -54,10 +116,7 @@ button {
     background-color:#57606f;
     color:white;
 }
-.back-button {
-    color:#4a69bd;
-    font-size:2em;
-}
+
 .viewport{
     display:flex;
     height:100%;
@@ -71,19 +130,25 @@ button {
 }
 .sidepanel {
     width: 20%; /* 0 width - change this with JavaScript */
-    color:white;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
+    position:relative;
+    text-align:center;
 }
 
 .playlist {
     flex-grow:1;
     height:100%;
     background-color: #222; /* Black*/
+    text-align:center;
     color:white;
 }
 .playlist-table {
     color:white;
+}
+
+.subtle-text {
+    opacity:0.3;
 }
