added some features

--- a/conv/styles/style.css
+++ b/conv/styles/style.css
@@ -3,7 +3,24 @@ html,body {
     background-color:black;
     color:#f1f2f6;
     font-family: Helvetica, Arial, Sans-Serif;
+    scrollbar-face-color: #646464;
+    scrollbar-base-color: #646464;
+    scrollbar-3dlight-color: #646464;
+    scrollbar-highlight-color: #646464;
+    scrollbar-track-color: #000;
+    scrollbar-arrow-color: #000;
+    scrollbar-shadow-color: #646464;
+    scrollbar-dark-shadow-color: #646464;
 }
+
+::-webkit-scrollbar { width: 8px; height: 3px;}
+::-webkit-scrollbar-button {  background-color: #666; }
+::-webkit-scrollbar-track {  background-color: #646464;}
+::-webkit-scrollbar-track-piece { background-color: #000;}
+::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px;}
+::-webkit-scrollbar-corner { background-color: #646464;}
+::-webkit-resizer { background-color: #666;}
+
 th {
     background-color:#3c6382;
 }
@@ -28,6 +45,12 @@ button {
     border-color:#3c6382;
     font-size:1em;
     color:white;
+}
+.delete-playlist-button {
+    position:absolute;
+    top:0.1em;
+    left:0.1em;
+
 }
 .delete-lyrics-button {
     position:absolute;
@@ -142,6 +165,7 @@ button {
     flex-grow:1;
     height:100%;
     background-color: #222; /* Black*/
+    overflow-y:scroll;
     text-align:center;
     color:white;
 }
